2007-04-26  Brian Pepple  <bpepple@fedoraproject.org>

	Reviewed by Naba Kumar  <naba@gnome.org>:
	* pixmaps/Makefile.am (update-icon-cache): fix gtk-update-icon-cache
	for uninstall-hook.

2007-04-26  Jason Switzer  <jswitzer@gmail.com>

	Reviewed by Naba Kumar  <naba@gnome.org>:
	* plugins/editor/text_editor.c: Large memory addresses were being
	truncated, switched to glong (bug #422143).

2007-04-24  Naba Kumar  <naba.kumar@gnome.org>

	* plugins/document-manager/plugin.c: (prefs_finalize):
	* plugins/editor/aneditor-autocomplete.cxx:
	* plugins/editor/text_editor_menu.c:
	* plugins/editor/text_editor_prefs.c: (text_editor_prefs_finalize):
	* plugins/file-loader/plugin.c: (open_file_with),
	(create_open_with_submenu):
	* plugins/file-manager/plugin.c: (prefs_finalize):
	* plugins/terminal/terminal.c: (prefs_finalize): Fixed int to
	pointer type castings.

2007-04-24  Naba Kumar  <naba.kumar@gnome.org>

	Patch from s|s  <supreet.sethi@gmail.com>:
	* (added) plugins/project-wizard/templates/django-logo.png:
	* (added) plugins/project-wizard/templates/django.wiz:
	* plugins/project-wizard/templates/Makefile.am:
	* plugins/project-wizard/templates/translatable-strings.h: Added
	django project template. http://www.djangoproject.com/

2007-04-24  Naba Kumar  <naba.kumar@gnome.org>

	* plugins/subversion/anjuta-subversion.glade: Set expansion for
	the log entry widget and made the dialog little larger.

2007-04-24  Naba Kumar  <naba.kumar@gnome.org>

	Patch from Halton Huo:
	* configure.in:
	* plugins/project-wizard/property.c:
	* plugins/subversion/svn-auth.c:
	* plugins/subversion/svn-backend-priv.h:
	* plugins/subversion/svn-backend.c:
	* plugins/subversion/svn-backend.h:
	* plugins/subversion/svn-notify.h: Proper use of subversion
	headers. Fixes build issues in solaris (bug #426701).

2007-04-24  Naba Kumar  <naba.kumar@gnome.org>

	* libanjuta/Makefile.am: Removed bogus newlines at the end of file.
	
	* plugins/project-wizard/templates/cpp.wiz: